tests/typescript/pos/simple/int-00.ts

/*@ foo :: ( x: number, y: boolean, z: string) => { number | true } */

function foo(x, y, z) {
    return x;
}
